# mcp-audit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GAPS.md  LICENSE  PRE-LAUNCH-REVIEW.md  PROVENANCE.md  README.md  SECURITY.md  action.yml  build.py  cursor-prompt-manual-test.md  mcp-audit-darwin-arm64.spec  mcp-audit-darwin-x86_64.spec  mcp-audit-linux-x86_64.spec  mcp-audit-windows-x86_64.spec  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  release-notes-template.md
.github/PULL_REQUEST_TEMPLATE/: rule-submission.md
.github/workflows/: action-ci.yml  ci.yml  codeql.yml  mcp-audit-example.yml  release.yml  synthetic-install.yml
demo/: README.md  run_demo.sh
demo/configs/: claude_desktop_config.json  cursor_mcp.json  vscode_mcp.json
docs/: README.md  baselines.md  contributing-rules.md  diff.md  docs-usage.md  enterprise-deployment.md  extensions.md  fleet-scanning.md  github-action.md  governance.md  killchain.md  live-connection.md  manual-test-matrix.md  nucleus-integration.md  owasp-mcp-top-10.md  pre-commit.md  registry-contributions.md  registry.md  sast-rules.md  scoring.md  severity-framework.md  shadow-mcp.md  snapshot.md  supply-chain.md  telemetry.md  writing-rules.md
docs/decisions/: 0001-shadow-mcp-as-hero-feature.md
docs/integrations/: sentinel.md  splunk.md
examples/github-actions/: basic.yml  diff-mode.yml  strict.yml  with-baseline.yml
examples/policies/: README.md  custom-scoring-weights.yml  enterprise.yml  starter.yml  strict.yml
examples/pre-commit/: basic.yaml  strict.yaml
registry/: known-extension-vulns.json  known-servers.json
rules/: README.md
rules/community/: COMM-001.yml  COMM-002.yml  COMM-003.yml  COMM-004.yml  COMM-005.yml  COMM-006.yml  COMM-007.yml  COMM-008.yml  COMM-009.yml  COMM-010.yml  COMM-011.yml  COMM-012.yml  COMM-013.yml
scripts/: build-linux.sh  enrich_registry.py  generate_license.py  install.sh  smoke_test.py  sync_counts.sh  update_test_count.py  validate_nucleus.py
semgrep-rules/: .semgrepignore  README.md
semgrep-rules/python/auth/: mcp-asymmetric-auth-routes.yml  mcp-auth-header-logged.yml
semgrep-rules/python/credentials/: mcp-credentials-in-args.yml  mcp-hardcoded-secrets.yml  mcp-secrets-logged.yml
semgrep-rules/python/injection/: mcp-eval-injection.yml  mcp-path-traversal.yml  mcp-sql-injection.yml  mcp-ssrf.yml  mcp-subprocess-injection.yml
semgrep-rules/python/poisoning/: mcp-description-exfiltration-url.yml  mcp-description-hidden-instructions.yml  mcp-description-obfuscated-content.yml
semgrep-rules/python/protocol/: mcp-missing-input-validation.yml  mcp-stack-trace-exposure.yml
semgrep-rules/python/transport/: mcp-http-no-tls.yml  mcp-listen-all-interfaces.yml
semgrep-rules/typescript/auth/: mcp-asymmetric-auth-routes.yml  mcp-auth-header-logged.yml
semgrep-rules/typescript/credentials/: mcp-hardcoded-secrets.yml  mcp-ts-credentials-in-args.yml  mcp-ts-secrets-logged.yml
semgrep-rules/typescript/injection/: mcp-child-process-injection.yml  mcp-eval-injection.yml  mcp-ts-path-traversal.yml  mcp-ts-sql-injection.yml  mcp-ts-ssrf.yml
semgrep-rules/typescript/poisoning/: mcp-description-hidden-instructions.yml  mcp-ts-description-exfiltration-url.yml  mcp-ts-description-obfuscated-content.yml
semgrep-rules/typescript/protocol/: mcp-ts-missing-input-validation.yml  mcp-ts-stack-trace-exposure.yml
semgrep-rules/typescript/transport/: mcp-http-no-tls.yml  mcp-ts-listen-all-interfaces.yml
src/mcp_audit/: __init__.py  _gate.py  _license_cache.py  _network.py  _paths.py  cli.py  config_parser.py  discovery.py  licensing.py  mcp_client.py  models.py  owasp_mcp.py  scanner.py  scoring.py  watcher.py
src/mcp_audit/analyzers/: attack_paths.py  base.py  config_hygiene.py  credentials.py  poisoning.py  rug_pull.py  supply_chain.py  toxic_flow.py  transport.py
src/mcp_audit/attestation/: __init__.py  hasher.py  sigstore_client.py  sigstore_findings.py  verifier.py
src/mcp_audit/baselines/: __init__.py  manager.py
src/mcp_audit/cli/: __init__.py  __main__.py  _helpers.py  baseline.py  dashboard.py  diff.py  extensions.py  fleet.py  killchain.py  license.py  policy.py  push_nucleus.py  registry.py  rules.py  sast.py  sbom.py  scan.py  shadow.py  snapshot.py  version.py
src/mcp_audit/data/: known_npm_packages.yaml  revoked.json
src/mcp_audit/diff/: __init__.py  comparator.py  loader.py  render.py  risk.py
src/mcp_audit/extensions/: __init__.py  analyzer.py  discovery.py  models.py
src/mcp_audit/fleet/: __init__.py  merger.py
src/mcp_audit/governance/: __init__.py  evaluator.py  loader.py  models.py
src/mcp_audit/killchain/: __init__.py  patches.py  render.py  (+2 more)
tests/: conftest.py  test_action_yaml.py  test_analyzers.py  test_attack_paths.py  test_attestation.py  test_base_analyzer.py  test_baselines.py  test_build.py  test_config_hygiene.py  test_cyclonedx_output.py  test_dashboard.py  test_dashboard_compat.py  test_dashboard_xss.py  test_diff.py  test_discovery.py  test_exploit_validation.py  test_extensions.py  test_false_positive_benchmark.py  test_fleet.py  test_gate.py  test_github_action.py  test_governance.py  test_killchain.py  test_license_cache.py  test_licensing.py  test_licensing_revocation.py  test_machine_info.py  test_mcp_client.py  test_network_policy.py  test_nucleus_output.py  test_owasp_mcp_mapping.py  test_pre_commit.py  test_pro_gating.py  test_push_nucleus.py  test_registry.py  test_rug_pull.py  test_rules.py  test_sarif_output.py  test_sarif_schema.py  test_sast.py  (+14 more)
tests/fixtures/: clean_with_credential.json  malicious_config.json  npx_auto_confirm.json  sarif-schema-2.1.0.json  smoke_test_config.json
tests/integration/: test_synthetic_install.py
tests/test_vulnerability/: test_osv.py  test_resolver.py
(+62 files in other folders)
