[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-audit-scanner"
version = "0.1.0"
description = "Privacy-first security scanner for MCP server configurations"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    { name = "Adam Dudley", email = "adam@mcp-audit.dev" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "scanner",
    "vulnerability-scanner",
    "ai-security",
    "llm-security",
    "prompt-injection",
    "supply-chain-security",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "watchdog>=4.0,<7.0",
    "cryptography>=46.0.6,<47.0",
    "packaging>=21.0",
    "platformdirs>=3.0",
]

[project.optional-dependencies]
attestation = [
    "sigstore>=3.0,<5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "bandit>=1.7",
    "mypy>=1.10",
    "pyinstaller>=6.0",
    "jsonschema>=4.0",
    "playwright>=1.40",
]
mcp = [
    "mcp>=1.0",
    "httpx>=0.27,<1.0",  # SSE transport client (future use)
]
sbom = [
    "cyclonedx-python-lib>=7.0,<8.0",
]

[project.scripts]
mcp-audit = "mcp_audit.cli:app"

[project.urls]
Homepage = "https://mcp-audit.dev"
Documentation = "https://mcp-audit.dev"
Repository = "https://github.com/adudley78/mcp-audit"
Issues = "https://github.com/adudley78/mcp-audit/issues"
Changelog = "https://github.com/adudley78/mcp-audit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_audit"]
# scripts/generate_license.py is intentionally excluded — it is a dev-only
# key-issuance utility that must not ship in the published package.

[tool.hatch.build.targets.wheel.force-include]
# Bundle the known-server registry inside the installed package so that
# importlib.resources can locate it at mcp_audit/registry/known-servers.json.
"registry/known-servers.json" = "mcp_audit/registry/known-servers.json"
"registry/known-extension-vulns.json" = "mcp_audit/registry/known-extension-vulns.json"
# Bundle the community rules inside the installed package so that
# importlib.resources can locate them at mcp_audit/rules/community/.
"rules/community" = "mcp_audit/rules/community"
# Bundle the Semgrep SAST rule pack inside the installed package.
"semgrep-rules" = "mcp_audit/semgrep-rules"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.bandit]
exclude_dirs = ["tests"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest-cov>=7.1.0",
]
